# deuspy

./: .gitignore  LICENSE  README.md  pyproject.toml
deuspy/: __init__.py  api.py  config.py  errors.py  gcode.py  job.py  machine.py  toolpath.py  units.py
deuspy/backends/: __init__.py  base.py  dryrun.py  grbl.py
deuspy/shapes/: __init__.py  base.py  box.py  cylinder.py  hole.py  polyline.py
deuspy/strategies/: __init__.py  base.py  engrave.py  peck_drill.py  perimeter.py  pocket.py
deuspy/tui/: __init__.py  app.py  splash.py  state.py  theme.tcss
deuspy/tui/screens/: designer.py  machines.py  repl.py
deuspy/tui/widgets/: jog_pad.py  machine_state.py  toolpath_view.py
deuspy/viz/: __init__.py  events.py  pyvista_viewer.py  standalone.py
examples/: repl_session.py
tests/: conftest.py  test_arcs.py  test_box_pocket.py  test_dryrun_session.py  test_gcode.py  test_grbl_fake_serial.py  test_tui.py  test_units.py  test_v2_misc.py  test_v2_shapes.py  test_v2_streaming.py  test_viz_smoke.py
